Amend test pages

--- a/docs/guides/tests/003.md
+++ b/docs/guides/tests/003.md
@@ -21,4 +21,4 @@ public class T_003_DataOverflow {
 
 ## 🔎 Why This Matters
 
-Overflow and underflow do not raise errors in Java — they silently wrap around. This can lead to subtle bugs in financial calculations, counters, or loops. Developers should use care when working near data type boundaries and consider tools like `Math.addExact()` to catch overflow at runtime.
+Overflow and underflow do not raise errors in Java, instead they silently wrap around. This can lead to subtle bugs in financial calculations, counters, or loops. Developers should use care when working near data type boundaries and consider tools like `Math.addExact()` to catch overflow at runtime.
