--- a/docs/guides/tests/005.md
+++ b/docs/guides/tests/005.md
@@ -2,7 +2,7 @@
 
 ## 📘 Preface
 
-Java allows method overloading and supports varargs — methods that accept a variable number of arguments. When both a general varargs method and a more specific overload exist, the compiler follows a strict resolution hierarchy. This test demonstrates how Java resolves method calls when both match, but one is more specific than the other.
+Java allows method overloading and supports varargs, basically methods that accept a variable number of arguments. When both a general varargs method and a more specific overload exist, the compiler follows a strict resolution hierarchy. This test demonstrates how Java resolves method calls when both match, but one is more specific than the other.
 
 ## 🔬 Test Case
 
