Update string concat benchmark results

--- a/docs/guides/benchmarks/004.md
+++ b/docs/guides/benchmarks/004.md
@@ -65,19 +65,19 @@ public class BM_004_StringConcatenation {
 ## ✅ Results
 
 ```
-Benchmark                              Mode  Cnt   Score    Error  Units
-BM_004_StringConcatenation.builder         1  avgt    5    18.530 ±   2.634  ns/op
-BM_004_StringConcatenation.builder        10  avgt    5    93.173 ±   2.471  ns/op
-BM_004_StringConcatenation.builder       100  avgt    5   992.184 ± 199.294  ns/op
-BM_004_StringConcatenation.concat          1  avgt    5     3.741 ±   0.032  ns/op
-BM_004_StringConcatenation.concat         10  avgt    5   142.177 ±   0.931  ns/op
-BM_004_StringConcatenation.concat        100  avgt    5  2229.919 ±  40.715  ns/op
-BM_004_StringConcatenation.join            1  avgt    5    14.614 ±   0.287  ns/op
-BM_004_StringConcatenation.join           10  avgt    5    91.907 ±   0.892  ns/op
-BM_004_StringConcatenation.join          100  avgt    5   908.119 ±  70.335  ns/op
-BM_004_StringConcatenation.plus            1  avgt    5     3.199 ±   0.167  ns/op
-BM_004_StringConcatenation.plus           10  avgt    5   146.210 ±   1.240  ns/op
-BM_004_StringConcatenation.plus          100  avgt    5  2265.399 ±  82.395  ns/op
+Benchmark                           (length)  Mode  Cnt     Score    Error  Units
+BM_004_StringConcatenation.builder         1  avgt    5    17.485 ±  0.309  ns/op
+BM_004_StringConcatenation.builder        10  avgt    5    87.555 ±  1.302  ns/op
+BM_004_StringConcatenation.builder       100  avgt    5   737.058 ± 53.362  ns/op
+BM_004_StringConcatenation.concat          1  avgt    5    12.890 ±  0.132  ns/op
+BM_004_StringConcatenation.concat         10  avgt    5   149.736 ±  0.545  ns/op
+BM_004_StringConcatenation.concat        100  avgt    5  2208.537 ± 48.658  ns/op
+BM_004_StringConcatenation.join            1  avgt    5    14.247 ±  0.151  ns/op
+BM_004_StringConcatenation.join           10  avgt    5    98.986 ±  1.144  ns/op
+BM_004_StringConcatenation.join          100  avgt    5   979.874 ± 40.951  ns/op
+BM_004_StringConcatenation.plus            1  avgt    5     3.747 ±  0.052  ns/op
+BM_004_StringConcatenation.plus           10  avgt    5   148.860 ±  2.753  ns/op
+BM_004_StringConcatenation.plus          100  avgt    5  2240.235 ± 98.413  ns/op
 ```
 
 ## 🔎 Findings
